Created get route for tasks with specific user assigned
